Kubernates/deployements/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: notes-app-deployment
  labels:
    app: notes-app
  namespace: notes-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      containers:
        - name: notes-app
          image: mohit021/my-app:latest
          ports:
            - containerPort: 80
