Kubernates/deployements/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: mypod
spec:
  containers:
    - name: nginxcontainer
      image: nginx:latest
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80
