Kubernates/deployements/service.yml
kind: Service
apiVersion: v1
metadata:
  name: notes-app-service
  namespace: notes-namespace
spec:
  selector:
    app: notes-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: ClusterIP
